/*
 * Copyright (C) 2017 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.service.namespace.source.proto;

import "common.proto";

option java_package = "com.dremio.service.namespace.source.proto";
option optimize_for = SPEED;

option java_outer_classname = "SourceProtobuf";

message SourceConfig {
  optional EntityId id = 1;
  required SourceType type = 2;
  optional string name = 3;
  optional int64 ctime = 4;
  optional string img = 5;
  optional string description = 6;
  optional bytes config = 7; // encoded message specific to SourceType.
  optional int64 version = 8;
  optional TimePeriod accelerationTTL = 9;
  optional MetadataPolicy metadata_policy = 10;
  optional int64 last_refresh_date = 11; // last refresh date
}

message MetadataPolicy {

  // how often we should update the names databases/tables associated with a system.
  optional int64 names_refresh_ms = 1;

  // how long can we cache the definition of a dataset before re-checking its authenticity.
  optional UpdateMode dataset_update_mode = 2;

  optional int64 dataset_definition_ttl_ms = 3;

  // how long can we cache knowledge of table access rights when using external authorization system via impersonation.
  optional int64 auth_ttl_ms = 4;
}

enum UpdateMode {
  UNKNOWN = 0;
  PREFETCH = 1;
  PREFETCH_QUERIED = 2;
  INLINE = 3;
}

enum SourceType {
  NAS = 0;
  HDFS = 1;
  MAPRFS = 2;
  S3 = 3;
  MONGO = 4;
  ELASTIC = 5;
  ORACLE = 6;
  MYSQL = 7;
  MSSQL = 8;
  POSTGRES = 9;
  REDSHIFT = 10;
  HBASE = 11;
  KUDU = 12;
  AZURE = 13;
  HIVE = 14;
  PDFS = 15;
  DB2 = 16;
  UNKNOWN = 17;
  HOME = 18;
  CLASSPATH = 19; // test-only
}
